crates/cli/tests/snapshots/unused_pattern_bind__fix_5523b932c97c732f7a88709e55fe2b202d774ad8840f8997eb674eb997e22b9f.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"attrs @ { x, ... }: x\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-attrs @ { x, ... }: x
+{ x, ... }: x
