crates/cli/tests/snapshots/unused_pattern_bind__fix_702fb7e249ba1917aa073bc4df44377fa796d2d86c8ca55849dd8a279d6106ba.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"args @ { x, y }: x + y\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-args @ { x, y }: x + y
+{ x, y }: x + y
