crates/cli/tests/snapshots/unused_pattern_bind__fix_f2f4d93cd0ae4af9be0a7104cca4ca08f184ce0d28829d3b3b38e9395605eb79.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"args @ { x, y }: args.x + y\""
---

