crates/cli/tests/snapshots/unused_pattern_bind__fix_fa72bea66f65d67d05a16d390856db6ad5634b93af6bd89b4c80fbe75def9cf7.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"{ ... } @ args: 42\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ ... } @ args: 42
+_: 42
