crates/cli/tests/snapshots/unused_pattern_bind__lint_4d1c1b9fba1fc25f363156a0be9227a4a5fd8856014de6bbba85bca6c9999c15.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"args @ { x ? 1, y }: args.x + y\""
---

