crates/cli/tests/snapshots/unused_pattern_bind__lint_5523b932c97c732f7a88709e55fe2b202d774ad8840f8997eb674eb997e22b9f.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"attrs @ { x, ... }: x\""
---
[32] Warning: This pattern binding is never used
   ╭─[<temp_file_path>:1:1]
   │
 1 │ attrs @ { x, ... }: x
   · ─────────┬────────  
   ·          ╰────────── attrs is never used; remove the redundant pattern binding
───╯
