crates/cli/tests/snapshots/unused_pattern_bind__lint_fa72bea66f65d67d05a16d390856db6ad5634b93af6bd89b4c80fbe75def9cf7.snap
---
source: crates/cli/tests/unused_pattern_bind.rs
expression: "\"{ ... } @ args: 42\""
---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[<temp_file_path>:1:1]
   │
 1 │ { ... } @ args: 42
   · ───────┬──────  
   ·        ╰──────── This pattern bind is redundant, use args instead
───╯
